gramatica.txt
program ::= statement* 'EOF'

statement ::= assignment
    | vardecl
    | funcdecl
    | if_stmt
    | while_stmt
    | break_stmt
    | continue_stmt
    | return_stmt
    | print_stmt

assignment ::= location '=' expression ';'

vardecl ::= ('var' | 'const') ID type? ('=' expression)? ';'

funcdecl ::= 'import'? 'func' ID '(' parameters ')' type '{' statement* '}'

if_stmt ::= 'if' expression '{' statement* '}'
    | 'if' expression '{' statement* '}' 'else' '{' statement* '}'

while_stmt ::= 'while' expression '{' statement* '}'

break_stmt ::= 'break' ';'

continue_stmt ::= 'continue' ';'

return_stmt ::= 'return' expression ';'

print_stmt ::= 'print' expression ';'

parameters ::= ID type (',' ID type)*
    |

type ::= 'int' | 'float' | 'char' | 'bool'

location ::= ID
    | '`' expression

expression ::= orterm ('||' orterm)*

orterm ::= andterm ('&&' andterm)*

andterm ::= relterm (('<' | '>' | '<=' | '>=' | '==' | '!=') relterm)*

relterm ::= addterm (('+' | '-') addterm)*

addterm ::= factor (('*' | '/') factor)*

factor ::= literal  
    | ('+' | '-' | '^') expression
    | '(' expression ')'
    | type '(' expression ')'
    | ID '(' arguments ')'
    | location

arguments ::= expression (',' expression)*
    |
literal ::= 'INTEGER' |'FLOAT' | 'CHAR' | bool

bool ::= 'true' | 'false'
